Use Gson and fix JSON metadata edge cases
Signed-off-by: subhramit <subhramit.bb@live.in>